--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,20 @@
     "version": 2,
     "routes": [
       {
-        "src": "/api/spotify",
+        "src": "/api/authorize",
         "dest": "/index.js"
       },
       {
-        "src": "/",
-        "dest": "/public/index.html"
+        "src": "/api/callback",
+        "dest": "/index.js"
+      },
+      {
+        "src": "/api/current-track",
+        "dest": "/index.js"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.js"
       }
     ]
   }
